# cargo_management

./: .editorconfig  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cargo_management/: __init__.py  api.py  hooks.py  jeans.py  modules.txt  patches.txt  utils.py
cargo_management/config/: desktop.py  docs.py
cargo_management/fixtures/: custom_html_block.json  issue_type.json  workspace.json
cargo_management/locale/: es.po  main.pot
cargo_management/parcel_selling/: utils.py
cargo_management/parcel_selling/custom/: quotation_item.json  sales_order_item.json
cargo_management/public/: build.json  carriers.json
cargo_management/public/css/: colors.scss
cargo_management/public/js/: cargo_management.bundle.js  package.js  parcel.js  quotation.js
cargo_management/public/scss/: cargo_management.bundle.scss  colors.scss  overrides.scss  package-indicator.scss
cargo_management/purchase_management/custom/: purchase_invoice_item.json
cargo_management/sales_customization/: utils.py
cargo_management/sales_customization/custom/: quotation.json  quotation_item.json  sales_invoice_item.json  sales_order_item.json
cargo_management/shipment_customization/: utils.py
cargo_management/shipment_customization/custom/: cargo_shipment.json
cargo_management/shipment_management/: utils.py
cargo_management/translations/: es.csv
package_management/: hooks.py  modules.txt
package_management/config/: desktop.py  docs.py
package_management/translations/: es.csv
parcel_management/: hooks.py  modules.txt
parcel_management/config/: desktop.py  docs.py
parcel_management/parcel_management/: notifications.py
parcel_management/translations/: es.csv
(+322 files in other folders)
