[project]
name = "cargo_management"
authors = [
    { name = "Agile Shift", email = "contacto@gruporeal.org" }
]
description = "ERPNext Cargo Management for Freight Forwarders"
requires-python = ">=3.10,<3.13"
readme = "README.md"
dynamic = ["version"]



dependencies = [
    "easypost==9.4.1"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff.lint]
typing-modules = ["frappe.types.DF"]
